--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -11,7 +11,8 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="152dp"
             android:layout_marginBottom="531dp"
             android:contentDescription="@string/favouriteselectionbutton"
-            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/favouriteButton"/>
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/favouriteButton"
+    />
     <TableLayout
             android:layout_width="0dp"
             android:layout_height="143dp"
